<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/txtLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HJC PERFORMANCE"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="#1A237E"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/txtLoginLogo"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:backgroundTint="#1A237E"
        android:textColor="#FFFFFF"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edtPassword"/>

    <TextView
        android:id="@+id/txtRegistar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register_link"
        android:textColor="#5C6BC0"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>